# raisim_ws

./: .gitignore  .gitmodules  README.md
src/MIT_mpc_ros/: CMakeLists.txt  config.h.cmake  package.xml
src/MIT_mpc_ros/common/: CMakeLists.txt
src/MIT_mpc_ros/common/src/Controllers/: LegController.cpp
src/MIT_mpc_ros/common/src/Utilities/: utilities.cpp
src/MIT_mpc_ros/documentation/doxygen/: Doxyfile
src/MIT_mpc_ros/robot/: CMakeLists.txt
src/MIT_mpc_ros/robot/include/: HardwareBridge.h  RobotRunner.h  SimulationBridge.h  main_helper.h
src/MIT_mpc_ros/robot/src/: HardwareBridge.cpp  RobotRunner.cpp  SimulationBridge.cpp  main_helper.cpp
src/MIT_mpc_ros/robot/src/rt/: rt_sbus.cpp  rt_serial.cpp
src/MIT_mpc_ros/scripts/: find_qt_path.sh
src/MIT_mpc_ros/sim/: CMakeLists.txt
src/MIT_mpc_ros/sim/include/: DrawList.h  SimControlPanel.h
src/MIT_mpc_ros/sim/src/: DrawList.cpp  SimControlPanel.cpp
src/MIT_mpc_ros/user/MIT_Controller/: CMakeLists.txt  MIT_Controller.cpp  MIT_Controller.hpp  main.cpp
src/MIT_mpc_ros/user/MIT_Controller/FSM_States/: SafetyChecker.h
src/a1_description/launch/: a1_rviz.launch  minicheetah.launch
src/a1_description/urdf/: a1.urdf  a1_edited.urdf
src/a1_description/xacro/: _d435.urdf.xacro  const.xacro  leg.xacro  robot.xacro
src/gamepad_ctrl/: CMakeLists.txt  README.md  package.xml
src/gamepad_ctrl/launch/: gamepad_ctrl.launch
src/gamepad_ctrl/src/: main.cpp
src/quadruped_msgs/: CMakeLists.txt  package.xml
src/quadruped_msgs/cfg/: general.cfg  tau_abad.xml
src/quadruped_msgs/msg/: CMPC_Result.msg  LegControllerCommand.msg
src/quadruped_msgs/srv/: QuadrupedCmdBool.srv
src/sim_bridge/: CMakeLists.txt  package.xml
src/sim_bridge/include/: ros_controller.h
src/sim_bridge/include/sim_bridge/: ros_controller.h
src/sim_bridge/launch/: mpc_locomotion.launch
src/sim_bridge/src/: minicheetah.cpp  ros_controller.cpp
src/unitree_legged_msgs/msg/: IMU.msg  LowCmd.msg  LowState.msg
