<?xml version="1.0"?>
<package format="2">
  <name>cheetah_software</name>
  <version>0.0.1</version>
  <description>MIT simulator</description>

  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>
  <author email="benjamin.pitzer@bosch.com">Benjamin Pitzer</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/usb_cam</url>
  <url type="bugtracker">https://github.com/bosch-ros-pkg/usb_cam/issues</url>
  <url type="repository">https://github.com/bosch-ros-pkg/usb_cam</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend> 
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend> 
</package>
